--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </script>
 
         <!-------body section-->
-        <section>
+        <section class="home-wrapper">
 
 
         </section>
@@ -42,19 +42,22 @@
             <h1 class="title-w">Web Developer</h1>
         </div>
 
-        <div class="about-n">
-              <h2>About Me</h2>
-              <img src="weru.jpg" alt="weru" class="weru-n">
-              <p>Passionate front-end web Developer Nairobi, Kenya. loves learning new things and also very innovative. An entrepreneur and a strategist<br/>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-        </div>
+        <!-- <div class="wrapper-about">
+              <header class="header">About Me</header>
+              <article class="main-about">
+                <p>Passionate front-end web Developer Nairobi, Kenya. loves learning new things and also very innovative. An entrepreneur and a strategist<br/>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
+              </article>
+              <aside class="aside aside-1"><img src="weru.jpg" alt="weru" class="weru-n"></aside>
+              <aside class="aside aside-2">aside 2</aside>
+        </div> -->
 
       <!-- projects -->
-      <div class="projects-n">
+      <!-- <div class="projects-n">
         <div class="pro-content">
           
         </div>
-      </div>
+      </div> --> 
             
 </body>
 </html>
