--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         </div> -->
 
       <!-- projects -->
-      <!-- <div class="projects-n">
+      <div class="projects-n">
         <div class="pro-content">
           
         </div>
-      </div> --> 
+      </div>
             
 </body>
 </html>
