--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
       <!-- projects -->
       <div class="projects-n">
         <div class="pro-content">
-          
+          <div class="box-container">
+            <h3> < / > My Portfolio </h3>
+            <p>Procastination is another word for Failure</p>
+            <p class="quate">You imagine and i create. I'm ready to take you business to the next level</p>
+          </div>
+        <div class="get-quoate">
+          <p>Passionate front-end web Developer Nairobi, Kenya. loves learning new     things and also very innovative. An entrepreneur and a strategist<br/>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.
+          </p>
+        </div>
         </div>
       </div>
             
