--- a/index.html
+++ b/index.html
@@ -41,30 +41,14 @@
             <img src="ngash.jpg" alt="ngash" class="ngash-image">
             <h1 class="title-w">Web Developer</h1>
         </div>
-
-        <!-- <div class="wrapper-about">
-              <header class="header">About Me</header>
-              <article class="main-about">
-                <p>Passionate front-end web Developer Nairobi, Kenya. loves learning new things and also very innovative. An entrepreneur and a strategist<br/>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.</p>
-              </article>
-              <aside class="aside aside-1"><img src="weru.jpg" alt="weru" class="weru-n"></aside>
-              <aside class="aside aside-2">aside 2</aside>
-        </div> -->
-
       <!-- projects -->
       <div class="projects-n">
         <div class="pro-content">
-          <div class="box-container">
-            <h3> < / > My Portfolio </h3>
+            <h3 class="about-h"><strong></></strong> About me </h3>
+           
+            <p class="quate">I'm an Intermidiate Web Developer. I have pursued a Diploma in Information Technology and with passion in this course, I have gathered the necessary Skills and Knowledge that helps me to Identify, Analyse, Design and Create catchy/ impeccable websites that will help you grow your business.</p>
+            <p>You imagine and i create a Website that will take your business to the next level</p>
             <p>Procastination is another word for Failure</p>
-            <p class="quate">You imagine and i create. I'm ready to take you business to the next level</p>
-          </div>
-        <div class="get-quoate">
-          <p>Passionate front-end web Developer Nairobi, Kenya. loves learning new     things and also very innovative. An entrepreneur and a strategist<br/>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et do sunt explicabo. Nemo enim ipsam et dolore magnam aliquam quaerat voluptatem.
-          </p>
-        </div>
         </div>
       </div>
             
