--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="myNav" class="overlay">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <div class="overlay-content">
-            <a href="#" V-for="message in message">{{message}}</a>
+            <a href="#about" V-for="message in message">{{message}}</a>
           </div>
         </div>
 
@@ -42,7 +42,7 @@
             <h1 class="title-w">Web Developer</h1>
         </div>
       <!-- projects -->
-      <div class="projects-n">
+      <div class="projects-n" id="about">
         <div class="pro-content">
             <h3 class="about-h"><strong></></strong> About me </h3>
            
@@ -51,6 +51,18 @@
             <p>Procastination is another word for Failure</p>
         </div>
       </div>
+
+      <!-- projects skills -->
+      <div class="skills-s">
+          <div class="skills-c">
+              <!-- <h3 class="skills-h"> Skills </h3> -->
+              <div class="java-s"><h4>{}<br/><strong>JS</strong></h4></div>
+              <div class="css-s"><h4>{}<br/><strong>CSS</strong></h4></div>
+              <div class="vue-s"><h4>{}<br/><strong>Vue</strong></h4></div>
+              <div class="php-s"><h4>{}<br/><strong>php</strong></h4></div>
+   
+          </div>
+        </div>
             
 </body>
 </html>
