--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h3 class="about-h"><strong></></strong> About me </h3>
            
             <p class="quate">I'm an Intermidiate Web Developer. I have pursued a Diploma in Information Technology and with passion in this course, I have gathered the necessary Skills and Knowledge that helps me to Identify, Analyse, Design and Create catchy/ impeccable websites that will help you grow your business.</p>
-            <p>You imagine and i create a Website that will take your business to the next level</p>
+            <!-- <p>You imagine and i create a Website that will take your business to the next level</p> -->
             <p>Procastination is another word for Failure</p>
         </div>
       </div>
