--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 
       <!-- projects skills -->
       <div class="skills-s">
+          <h3>Skills </h3>
           <div class="skills-c">
-              <!-- <h3 class="skills-h"> Skills </h3> -->
+            
               <div class="java-s"><h4>{}<br/><strong>JS</strong></h4></div>
               <div class="css-s"><h4>{}<br/><strong>CSS</strong></h4></div>
               <div class="vue-s"><h4>{}<br/><strong>Vue</strong></h4></div>
