--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
         </div>
         <div class="services">
           
+            <div class="web-design1 web">
+              <img src="res.png" class="res-image" alt="responsive">
+              <p>Websites have a diffrent view on different device. It dependes with the type you have</p>
+            </div>
+            <div class="web-design2 web">
+              <img src="dev.png" class="res-image" alt="responsive">
+              <p>Websites have a diffrent view on different device. It dependes with the type you have</p>
+            </div>
+            <div class="web-design3 web">
+              <img src="maintain.png" class="res-image" alt="responsive">
+              <p>Websites have a diffrent view on different device. It dependes with the type you have</p>
+            </div>
         </div>
             
 </body>
