--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@
 
       <!-- projects skills -->
       <div class="skills-s">
-          <h3>Skills </h3>
-          <div class="skills-c">
-            
-              <div class="java-s"><h4>{}<br/><strong>JS</strong></h4></div>
-              <div class="css-s"><h4>{}<br/><strong>CSS</strong></h4></div>
-              <div class="vue-s"><h4>{}<br/><strong>Vue</strong></h4></div>
-              <div class="php-s"><h4>{}<br/><strong>php</strong></h4></div>
-   
-          </div>
+          <div class="skill"><h3>Skills </h3></div>
+            <div class="skills-item">
+              <div class="skill"><h3>Skills </h3></div>
+              <div class="html-s web1"><h4>< /><br/><strong>HTML</strong></h4>
+              </div>
+              <div class="java-s web1"><h4>{}<br/><strong>JS</strong></h4></div>
+              <div class="css-s web1"><h4>{}<br/><strong>CSS</strong></h4></div>
+              <div class="vue-s web1"><h4>{}<br/><strong>Vue</strong></h4></div>
+              <div class="php-s web1"><h4>{}<br/><strong>php</strong></h4></div>
+              <div class="php-s1 web1"><h4>{}<br/><strong>SQL</strong></h4></div>
+
+            </div>
         </div>
         <div class="services">
           
