--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
             <p class="quate">I'm an Intermidiate Web Developer. I have pursued a Diploma in Information Technology and with passion in this course, I have gathered the necessary Skills and Knowledge that helps me to Identify, Analyse, Design and Create catchy/ impeccable websites that will help you grow your business.</p>
             <!-- <p>You imagine and i create a Website that will take your business to the next level</p> -->
             <p class="last-p">Procastination is another word for Failure</p>
+            <p class="hire-m">Hire me</p>
         </div>
       </div>
 
       <!-- projects skills -->
-      <div class="skills-s">
+      <!-- <div class="skills-s">
           <div class="skill"><h3>Skills </h3></div>
             <div class="skills-item">
               <div class="html-s web1"><h4>< /><br/><strong>HTML</strong></h4>
@@ -66,7 +67,7 @@
               <div class="php-s1 web1"><h4>{}<br/><strong>SQL</strong></h4></div>
 
             </div>
-        </div>
+        </div> -->
         <div class="services">
           
             <div class="web-design1 web">
