--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@
 
             </div>
         </div> -->
+        <div class="myskills">
+          
+          <div class="Html web2">
+            <img src="html.png" class="res-image" alt="responsive">
+          </div>
+          <div class="css web2">
+            <img src="css.png" class="res-image" alt="responsive">
+          </div>
+          <div class="javascript web2">
+            <img src="javascript.png" class="res-image" alt="responsive">
+          </div>
+          <div class="Vue web2">
+            <img src="vue.jpg" class="res-image" alt="responsive">
+          </div>
+          <div class="php web2">
+              <div class="text1">
+                  <h2>php</h2>
+              </div> 
+            <div class="overlay1"></div> 
+          </div>
+      </div>
+
+
         <div class="services">
           
             <div class="web-design1 web">
