--- a/index.html
+++ b/index.html
@@ -54,17 +54,34 @@
         </div>
         <div class="skillsy">
           <div class="html-skill">
-            <h2>Html</h2>
-            <div class="c1"></div>
-            <div class="c1"></div>
-            <div class="c1"></div>
-            <div class="c1"></div>
+              <p>Html</p>
+              <div class="cont">
+               <div class="course html">95%</div>
+              </div>
           </div>
           <div class="css-skill">
+              <p>CSS</p>
+              <div class="cont">
+                <div class="course css">95%</div>
+              </div>
           </div>
           <div class="javascript-skill">
+              <p>javascript</p>
+              <div class="cont">
+                  <div class="course javascript">75%</div>
+              </div>
+          </div>
+          <div class="jquery-skill">
+              <p>jQuery</p>
+              <div class="cont">
+                  <div class="course jQuery">65%</div>
+                </div>
           </div>
           <div class="vue-skill">
+              <p>Vue</p>
+              <div class="cont">
+                  <div class="course vue">55%</div>
+              </div>
           </div>
         </div>
       </div>
