--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
     </script>
 
     <!-------body section-->
-    <section class="home-wrapper"></section>
+    <section class="home-wrapper"><div class="overlaya"></div></section>
     <span class="humbuger" onclick="openNav()">&#9776; Ng'ash</span>
     <div class="home-content">
       <img src="img/ngash.jpg" alt="ngash" class="ngash-image" />
       <h1 class="title-w">Web Developer</h1>
     </div>
+
     <!-- ABOUT ME-->
     <div class="project-wrapper" id="about">
       <div class="project-content">
