--- a/index.html
+++ b/index.html
@@ -58,7 +58,24 @@
     </div>
 
     <!-- MYskills -->
-    <div class="skills-s"></div>
+    <div class="skills-s">
+      <div class="programing">
+        <h1>My Stack</h1>
+        <ul>
+          <li>HTML, CSS</li>
+          <li>
+            javascript
+            <ul>
+              <li>Vue</li>
+              <li>React</li>
+            </ul>
+          </li>
+          <li>jQuery</li>
+          <li>Bootstrap</li>
+        </ul>
+        <p>I'm a professional IT specialist</p>
+      </div>
+    </div>
     <!-- MYPROJECTS -->
 
     <div class="projects"></div>
