--- a/index.html
+++ b/index.html
@@ -78,7 +78,16 @@
     </div>
     <!-- MYPROJECTS -->
 
-    <div class="projects"></div>
+    <div class="projects">
+      <div class="projects-1">
+        <h3 class="about-h">Projects</h3>
+        <a href="#http://ngasha.github.io/ITati">
+          <img src="img/project1.PNG" alt="p1" />
+        </a>
+        <a href="#"><img src="img/project1.PNG" alt="p1"/></a>
+        <a href="#"><img src="img/project1.PNG" alt="p1"/></a>
+      </div>
+    </div>
     <!-- myCONTACTS -->
     <div class="contacts"></div>
   </body>
