--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
     </script>
 
     <!-------body section-->
-    <section class="home-wrapper"><div class="overlaya"></div></section>
-    <span class="humbuger" onclick="openNav()">&#9776; Ng'ash</span>
-    <div class="home-content">
-      <img src="img/ngash.jpg" alt="ngash" class="ngash-image" />
-      <h1 class="title-w">Web Developer</h1>
-    </div>
+    <section class="home-wrapper">
+      <div class="overlaya">
+        <div class="div1 de">Html</div>
+        <div class="div2 de">css</div>
+        <div class="div3 de">bootstrap</div>
+        <div class="div4 de">Javascript</div>
+        <div class="div5 de">jQuery</div>
+      </div>
+      <span class="humbuger" onclick="openNav()">&#9776; Ng'ash</span>
+      <div class="home-content">
+        <img src="img/ngash.jpg" alt="ngash" class="ngash-image" />
+        <h1 class="title-w">Web Developer</h1>
+      </div>
+    </section>
   </body>
 </html>
