--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
     <!-------body section-->
     <section class="home-wrapper">
       <div class="overlaya">
+        <h1 class="introduce">Hello, I'm Peter Welcome to my Portfolio.</h1>
         <div class="div1 de">Html</div>
         <div class="div2 de">css</div>
         <div class="div3 de">bootstrap</div>
         <div class="div4 de">Javascript</div>
         <div class="div5 de">jQuery</div>
       </div>
-      <span class="humbuger" onclick="openNav()">&#9776; Ng'ash</span>
+      <span class="logal">Ng'ash</span>
+      <span class="humbuger" onclick="openNav()">&#9776;</span>
       <div class="home-content">
         <img src="img/ngash.jpg" alt="ngash" class="ngash-image" />
         <h1 class="title-w">Web Developer</h1>
       </div>
+      <h2 class="hire-ngash">Hire me on Fiverr</h2>
     </section>
   </body>
 </html>
