--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <!-------body section-->
     <section class="home-wrapper">
       <div class="overlaya">
-        <h1 class="introduce">Hello, I'm Peter Welcome to my Portfolio.</h1>
+        <h1 class="introduce">
+          Hello, I'm Peter...A Front End Developer. Welcome to my Portfolio.
+        </h1>
         <div class="div1 de">Html</div>
         <div class="div2 de">css</div>
         <div class="div3 de">bootstrap</div>
