--- a/html/about.html
+++ b/html/about.html
@@ -28,10 +28,17 @@
       function closeNav() {
         document.getElementById("myNav").style.width = "0%";
       }
+      function openAbout(){
+        document.getElementById("overlaya-about").style.display = "none";
+      }
     </script>
  <span class="humbuger" onclick="openNav()">&#9776; Ng'ash</span>
   <body>
     <!-- ABOUT ME-->
+    <div class="overlaya-about" id="overlaya-about" onclick="openAbout()">
+      <img src="../img/play.png" alt="" class="btn-cheza">
+      <p class="play-me">click the play button to know about me</p>
+    </div>
     <div class="project-wrapper" id="about">
       <div class="project-content">
         <h3 class="about-h">About me</h3>
