--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img src="img/ngash.jpg" alt="ngash" class="ngash-image" />
         <h1 class="title-w">Web Developer</h1>
       </div>
-      <h2 class="hire-ngash">Hire me on Fiverr</h2>
+      <h2 class="hire-ngash">Hire me</h2>
     </section>
   </body>
 </html>
