--- a/html/about.html
+++ b/html/about.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?" rel="stylesheet" />
     <link href="../styles.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   </head>
   <script src="img/https://cdn.jsdelivr.net/npm/vue"></script>
   <body>
@@ -32,7 +33,7 @@
         document.getElementById("overlaya-about").style.display = "none";
       }
     </script>
- <span class="humbuger" onclick="openNav()">&#9776; Ng'ash</span>
+ <span class="humbuger" onclick="openNav()">&#9776;</span>
   <body>
     <!-- ABOUT ME-->
     <div class="overlaya-about" id="overlaya-about" onclick="openAbout()">
@@ -41,6 +42,7 @@
     </div>
     <div class="project-wrapper" id="about">
       <div class="project-content">
+        <span class="logal">Ng'ash</span>
         <h3 class="about-h">About me</h3>
         <p class="quate">
           I'm an Intermidiate Web Developer. I have pursued a Diploma in
@@ -57,6 +59,11 @@
 
     <!-- MYskills -->
     <div class="skills-s">
+        <div class="div1 de">Html</div>
+        <div class="div2 de">css</div>
+        <div class="div3 de">bootstrap</div>
+        <div class="div4 de">Javascript</div>
+        <div class="div5 de">jQuery</div>
       <div class="programing">
         <h1>My Stack</h1>
         <ul>
@@ -71,7 +78,7 @@
           <li>jQuery</li>
           <li>Bootstrap</li>
         </ul>
-        <p>I'm a professional IT specialist</p>
+        <p>CAREER:<strong>IT Specialist</strong></p>
       </div>
     </div>
   </body>
