--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <script src="img/https://cdn.jsdelivr.net/npm/vue"></script>
@@ -36,11 +40,6 @@
         <h1 class="introduce">
           Hello, I'm Peter...A Front End Developer. Welcome to my Portfolio.
         </h1>
-        <div class="div1 de">Html</div>
-        <div class="div2 de">css</div>
-        <div class="div3 de">bootstrap</div>
-        <div class="div4 de">Javascript</div>
-        <div class="div5 de">jQuery</div>
       </div>
       <span class="logal">Ng'ash</span>
       <span class="humbuger" onclick="openNav()">&#9776;</span>
