--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </h1>
       </div>
       <span class="logal">Ng'ash</span>
-      <span class="humbuger" onclick="openNav()">&#9776;</span>
+      <span class="humbugery" onclick="openNav()">&#9776;</span>
       <div class="home-content">
         <img src="img/ngash.jpg" alt="ngash" class="ngash-image" />
         <h1 class="title-w">Web Developer</h1>
