--- a/html/about.html
+++ b/html/about.html
@@ -36,10 +36,10 @@
  <span class="humbuger" onclick="openNav()">&#9776;</span>
   <body>
     <!-- ABOUT ME-->
-    <div class="overlaya-about" id="overlaya-about" onclick="openAbout()">
+   <!-- <div class="overlaya-about" id="overlaya-about" onclick="openAbout()">
       <img src="../img/play.png" alt="" class="btn-cheza">
       <p class="play-me">click the play button to know about me</p>
-    </div>
+    </div>-->
     <div class="project-wrapper" id="about">
       <div class="project-content">
         <span class="logal">Ng'ash</span>
@@ -59,11 +59,6 @@
 
     <!-- MYskills -->
     <div class="skills-s">
-        <div class="div1 de">Html</div>
-        <div class="div2 de">css</div>
-        <div class="div3 de">bootstrap</div>
-        <div class="div4 de">Javascript</div>
-        <div class="div5 de">jQuery</div>
       <div class="programing">
         <h1>My Stack</h1>
         <ul>
@@ -80,6 +75,11 @@
         </ul>
         <p>CAREER:<strong>IT Specialist</strong></p>
       </div>
+      <!-- <div class="div1 de">Html</div>
+        <div class="div2 de">css</div>
+        <div class="div3 de">bootstrap</div>
+        <div class="div4 de">Javascript</div>
+        <div class="div5 de">jQuery</div> -->
     </div>
   </body>
 </html>
