--- a/html/project.html
+++ b/html/project.html
@@ -29,11 +29,22 @@
         document.getElementById("myNav").style.width = "0%";
       }
     </script>
-    <span class="humbuger" onclick="openNav()">&#9776; Ng'ash</span>
-    <body>
+    
+    <body class="over-page">
+      <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+
+
       <!-- MYPROJECTS -->
 
-      <div class="projects">
+      <!--<div class="projects">
         <div class="projects-1">
           <h3 class="about-h">Projects</h3>
           <a href="#http://ngasha.github.io/ITati">
@@ -43,8 +54,7 @@
           <a href="#"><img src="../img/project1.PNG" alt="p1"/></a>
         </div>
       </div>
-      <!-- myCONTACTS -->
-      <div class="contacts"></div>
-    </body>
+     
+      <div class="contacts"></div>-->
   </body>
 </html>
