--- a/html/project.html
+++ b/html/project.html
@@ -37,8 +37,8 @@
       });
       $(document).ready(function(){
         $(".skip-show").click(function(){
-          $(".over-page").hide(1000);
-          $(".project-hider").show(500);
+          $(".over-page").hide("fast");
+          $(".project-hider").show("slow");
         })
       });
     </script>
