--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       href="https://fonts.googleapis.com/css?family=Lobster&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <script src="img/https://cdn.jsdelivr.net/npm/vue"></script>
@@ -37,17 +41,22 @@
     <!-------body section-->
     <section class="home-wrapper">
       <div class="overlaya">
-        <h1 class="introduce">
-          Hello, I'm Peter...A Front End Developer. Welcome to my Portfolio.
-        </h1>
+        <div class="landing">
+          <h1 class="introduce">
+            Hello, I'm Peter...A Front End Developer. Welcome to my Portfolio.
+          </h1>
+          <div class="get-me">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a class="fa fa-whatsapp"></a>
+          </div>
+        </div>
+        <h2 class="hire-ngash">Lets Go</h2>
       </div>
       <span class="logal">Ng'ash</span>
       <span class="humbugery" onclick="openNav()">&#9776;</span>
-      <div class="home-content">
-        <img src="img/ngash.jpg" alt="ngash" class="ngash-image" />
-        <h1 class="title-w">Web Developer</h1>
-      </div>
-      <h2 class="hire-ngash">Hire me</h2>
     </section>
   </body>
 </html>
