--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <script src="img/https://cdn.jsdelivr.net/npm/vue"></script>
@@ -43,7 +51,8 @@
       <div class="overlaya">
         <div class="landing">
           <h1 class="introduce">
-            Hello, I'm Peter...A Front End Developer. Welcome to my Portfolio.
+            Hello, I'm Peter...A front-End web developer. Welcome to my
+            Portfolio.
           </h1>
           <div class="get-me">
             <a href="#" class="fa fa-facebook"></a>
