--- a/html/project.html
+++ b/html/project.html
@@ -60,13 +60,14 @@
       <!-- MYPROJECTS -->
       <span class="humbuger" onclick="openNav()">&#9776;</span>
       <div class="projects">
+          <h2 class="about-h">Projects</h2>
         <div class="projects-1">
-          <h3 class="about-h">Projects</h3>
           <a href="#http://ngasha.github.io/ITati">
-            <img src="../img/project1.PNG" alt="p1" />
+            <img src="../img/pure.PNG" alt="p1" />
           </a>
-          <a href="#"><img src="../img/project1.PNG" alt="p1"/></a>
-          <a href="#"><img src="../img/project1.PNG" alt="p1"/></a>
+          <a href="#"><img src="../img/weru.PNG" alt="p1"/></a>
+          <a href="#"><img src="../img/nainet.PNG" alt="p1"/></a>
+          <a href="#"><img src="../img/food.PNG" alt="food"/></a>
         </div>
       </div>
      
