--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             Hello, I'm Peter...A front-End web developer. Welcome to my
             Portfolio.
           </h1>
+          <img src="img/porto.PNG" alt="portfolio" class="portfo-img" />
           <div class="get-me">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
