--- a/html/about.html
+++ b/html/about.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css?" rel="stylesheet" />
-    <link href="../styles.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
-  </head>
-  <script src="img/https://cdn.jsdelivr.net/npm/vue"></script>
-  <body>
-    <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
-      <div class="overlay-content">
-        <a href="../index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="project.html">Projects</a>
-        <a href="contact.html">Contact</a>
-      </div>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?" rel="stylesheet" />
+  <link href="../styles.css" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+</head>
+<script src="img/https://cdn.jsdelivr.net/npm/vue"></script>
+
+<body>
+  <div id="myNav" class="overlay">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+      <a href="../index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="project.html">Projects</a>
+      <a href="contact.html">Contact</a>
     </div>
+  </div>
 
-    <script src="img/https://unpkg.com/vue"></script>
-    <script>
-      function openNav() {
-        document.getElementById("myNav").style.width = "100%";
-      }
+  <script src="img/https://unpkg.com/vue"></script>
+  <script>
+    function openNav() {
+      document.getElementById("myNav").style.width = "100%";
+    }
 
-      function closeNav() {
-        document.getElementById("myNav").style.width = "0%";
-      }
-      
-    </script>
- <span class="humbuger" onclick="openNav()">&#9776;</span>
+    function closeNav() {
+      document.getElementById("myNav").style.width = "0%";
+    }
+
+  </script>
+  <span class="humbuger" onclick="openNav()">&#9776;</span>
+
   <body>
     <!-- ABOUT ME-->
     <div class="project-wrapper" id="about">
+      <span class="logal">Ng'ash</span>
       <div class="project-content">
-        <span class="logal">Ng'ash</span>
         <h3 class="about-h">About me</h3>
         <p class="quate">
           I'm an Intermidiate Web Developer. I have pursued a Diploma in
@@ -67,7 +68,7 @@
           <li>jQuery</li>
           <li>Bootstrap</li>
         </ul>
-        <p>CAREER:<strong>IT Specialist</strong></p>
+        <p>WEB DEVELOPER</p>
       </div>
       <!-- <div class="div1 de">Html</div>
         <div class="div2 de">css</div>
@@ -76,4 +77,5 @@
         <div class="div5 de">jQuery</div> -->
     </div>
   </body>
+
 </html>
