--- a/html/about.html
+++ b/html/about.html
@@ -55,7 +55,7 @@
     <!-- MYskills -->
     <div class="skills-s">
       <div class="programing">
-        <h1>My Stack</h1>
+        <h1 class="stack">My Stack</h1>
         <ul>
           <li>HTML, CSS</li>
           <li>
