--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
           Hello, I'm Peter...A front-End web developer. Welcome to my
           Portfolio.
         </h1>
-        <img src="img/tab.PNG" alt="portfolio" class="portfo1-img" />
+        <img src="img/tablet.PNG" alt="portfolio" class="portfo1-img" />
         <img src="img/porto.PNG" alt="portfolio" class="portfo-img" />
         <div class="get-me">
-          <a href="#" class="fa fa-facebook"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-google"></a>
-          <a href="#" class="fa fa-linkedin"></a>
+          <a href="https://www.facebook.com/ngashpatel" target="_blank" class="fa fa-facebook"></a>
+          <a href="https://twitter.com/phoebeessay" target="_blank" class="fa fa-twitter"></a>
+          <a href="https://www.linkedin.com/peter-waweru-42bb4a12a"  target="_blank" class="fa fa-linkedin"></a>
           <a class="fa fa-whatsapp"></a>
         </div>
       </div>
