--- a/html/about.html
+++ b/html/about.html
@@ -31,12 +31,14 @@
     }
 
   </script>
-  <span class="humbuger" onclick="openNav()">&#9776;</span>
-
-  <body>
+	<header>
+		<nav>
+			<span class="humbuger" onclick="openNav()">&#9776;</span>
+			<span class="logal">Ng'ash</span>
+		</nav>
+	</header>
     <!-- ABOUT ME-->
     <div class="project-wrapper" id="about">
-      <span class="logal">Ng'ash</span>
       <div class="project-content">
         <h3 class="about-h">About me</h3>
         <p class="quate">
